config-root/namespaces/jx-production/k8s-node/k8s-node-k8s-node-deploy.yaml
# Source: k8s-node/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-node-k8s-node
  labels:
    draft: draft-app
    chart: "k8s-node-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'k8s-node'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-production
spec:
  selector:
    matchLabels:
      app: k8s-node-k8s-node
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: k8s-node-k8s-node
    spec:
      serviceAccountName: k8s-node-k8s-node
      containers:
        - name: k8s-node
          image: "gcr.io/vocal-tracer-324708/k8s-node:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 0.1
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
